delivery/helm-chart/security/apim-elastic-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: apim-elastic-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: elasticsearch
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: apim3
