delivery/helm-chart/security/ingress-internal-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-internal-policy
spec:
  podSelector:
    matchLabels:
      visibility: external
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              com.mcm.maas.internal: "true"
    - from:
        - namespaceSelector:
            matchLabels:
              com.mcm.maas.apim: "true"
          podSelector:
            matchLabels:
              app.kubernetes.io/component: gateway
